--- a/join.css
+++ b/join.css
@@ -1,3 +1,11 @@
+.main-content {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-bottom: 100px;
+  margin-top: 60px;
+}
+
 .main-header {
   width: 111%;
   height: 100px;
