--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ header {
   position: fixed;
   top: 0;
   background: var(--bg-color);
+  z-index: 4;
 }
 
 header a {
@@ -109,14 +110,6 @@ main {
   padding: 0 var(--left-right-padding);
 }
 
-.main-content {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  padding-bottom: 100px;
-  margin-top: 60px;
-}
-
 .current-pg {
   background: var(--btn-2-color) !important;
   color: var(--bg-color) !important;
@@ -155,7 +148,7 @@ footer {
   display: none;
 }
 
-@media only screen and (min-width: 1300px) {
+@media only screen and (min-width: 900px) {
   .extra-links {
     display: grid;
     gap: 2rem;
@@ -167,7 +160,7 @@ footer {
   }
 }
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 900px) {
   .main-content {
     display: flex;
     align-items: center;
