--- a/styles.css
+++ b/styles.css
@@ -148,6 +148,28 @@ footer {
   display: none;
 }
 
+.button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+  border-radius: 10px;
+  font-size: 1.3rem;
+  font-weight: 800;
+  color: var(--bg-color);
+  background: var(--btn-2-color);
+  transition: 200ms ease-in-out;
+  box-shadow: 0px 4px 5px 0px black;
+}
+
+.button:hover {
+  box-shadow: 0px 0px 0px 0px black;
+  transform: translateY(3px);
+  transform: scale(0.987);
+  color: var(--text-color);
+  background: var(--btn-color);
+}
+
 @media only screen and (min-width: 900px) {
   .extra-links {
     display: grid;
