--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ footer {
   transform: translateY(3px);
   transform: scale(0.987);
   color: var(--text-color);
-  background: var(--btn-color);
+  background: var(--bg-color);
 }
 
 @media only screen and (min-width: 900px) {
