--- a/index.css
+++ b/index.css
@@ -35,6 +35,10 @@ main h1 {
 }
 
 @media only screen and (min-width: 1300px) {
+  .hide-desktop {
+    display: none;
+  }
+
   .column {
     display: flex;
     align-items: center;
