--- a/join.css
+++ b/join.css
@@ -68,6 +68,12 @@
   width: 100%;
 }
 
+.video {
+  margin: auto;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
 @media only screen and (min-width: 970px) {
   .grid {
     grid-template-columns: 2fr 1fr;
