--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@600;700&display=swap");
 
 :root {
   --left-right-padding: 5%;
@@ -75,6 +76,10 @@ nav a {
 nav li:hover {
   border-bottom: solid 4px #9adcff;
   transition: 200ms;
+}
+
+p {
+  font-family: "Catamaran", sans-serif;
 }
 
 .purple {
@@ -192,6 +197,12 @@ footer {
     z-index: 1;
   }
 
+  .main-navigation a {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
   .main-navigation ul {
     position: absolute;
     width: 400px;
@@ -264,7 +275,7 @@ footer {
     justify-content: center;
     align-items: center;
     font-size: 23px;
-    margin: 10px 0;
+    margin: 20px 0;
     border-width: 5px !important;
   }
 
