--- a/join.css
+++ b/join.css
@@ -82,8 +82,85 @@
   text-align: center;
 }
 
-/* START OF DISCORD SYLEING */
+.more-block {
+  display: block;
+  flex-direction: column;
+}
 
+/* START OF DISCORD SYLEING */
+.disc {
+  margin-top: auto;
+  background-color: #36393f;
+  border-radius: 0 0 10px 10px;
+  padding: 7px 5px 7px 0;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.disc-message {
+  padding: 5px;
+  display: grid;
+  grid-template-columns: 50px 1fr;
+}
+
+.disc-account {
+  background-color: #555;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+
+.disc-message-text {
+  margin-left: 20px;
+}
+
+.disc-top-text > * {
+  display: inline;
+  margin: 0;
+  font-weight: 100;
+  color: #a3a6a0;
+}
+
+.disc-top-text > p:first-child {
+  color: #ff4bf0;
+  font-weight: 400;
+}
+
+.disc-btm-text > * {
+  display: inline;
+  margin: 0;
+  font-weight: 300;
+}
+
+.disc-highlight {
+  background-color: #4e4d73;
+  padding: 0 3px;
+  border-radius: 3px;
+}
+
+.disc-message-container {
+  background-color: #40444b;
+  margin: 20px 0 0 5px;
+  border-radius: 7px;
+  display: flex;
+  align-items: center;
+  height: 50px;
+}
+
+.disc-add-btn {
+  margin-left: 20px;
+}
+
+.disc-message-container > p {
+  margin-left: 20px;
+  font-weight: 400;
+  color: #72767d;
+}
+
+.disc-accepted {
+  background-color: #49443c;
+}
 /* END OF DISCORD SYLEING */
 
 @media only screen and (min-width: 970px) {
@@ -93,7 +170,7 @@
   }
 
   .lower-grid {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
   }
 
   .show-desktop {
@@ -102,11 +179,5 @@
 
   .hide-desktop {
     display: none;
-  }
-}
-
-@media screen and (min-width: 1500px) {
-  .lower-grid {
-    grid-template-columns: 1fr 1fr;
   }
 }
