--- a/join.css
+++ b/join.css
@@ -105,6 +105,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
+  box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.5);
 }
 
 .disc-message {
