--- a/community.css
+++ b/community.css
@@ -113,7 +113,7 @@ main {
   }
 }
 
-@media screen and (min-width: 800px) {
+@media only screen and (min-width: 800px) {
   .button:hover > .icon {
     background-color: #333;
     width: 60%;
