--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,11 @@ p {
 }
 
 .green {
-  background-color: #41e8c0;
+  background-color: #41e889;
+}
+
+.orange {
+  background-color: #fdac55;
 }
 
 .title {
@@ -218,9 +222,10 @@ hr {
   .main-navigation ul {
     position: absolute;
     width: 400px;
-    margin: -50px 0 0 -60px;
+    margin: -53px 0 0 -60px;
     padding: 30px 50px 10px 50px;
     border-radius: 0 0 0 20px;
+    box-shadow: 0 0 7px 5px rgba(0, 0, 0, 0.36);
 
     background: var(--text-color);
     list-style-type: none;
