--- a/styles.css
+++ b/styles.css
@@ -106,27 +106,63 @@ p {
 }
 
 .purple {
-  background-color: #b983ff;
+  /* background-color: #b983ff; */
+  background: rgb(125, 72, 254);
+  background: linear-gradient(
+    90deg,
+    rgb(144, 102, 251) 0%,
+    rgb(203, 164, 253) 100%
+  );
 }
 
 .blue {
-  background-color: #9adcff;
+  /* background-color: #9adcff; */
+  background: rgb(77, 127, 255);
+  background: linear-gradient(
+    90deg,
+    rgb(101, 144, 255) 0%,
+    rgb(116, 211, 255) 100%
+  );
 }
 
 .red {
-  background-color: #ff8aae;
+  /* background-color: #ff8aae; */
+  background: rgb(255, 85, 85);
+  background: linear-gradient(
+    90deg,
+    rgb(255, 103, 103) 0%,
+    rgb(255, 162, 131) 100%
+  );
 }
 
 .yellow {
-  background-color: #fff89a;
+  /* background-color: #fff89a; */
+  background: rgb(255, 85, 85);
+  background: linear-gradient(
+    90deg,
+    rgb(252, 221, 81) 0%,
+    rgb(255, 248, 143) 100%
+  );
 }
 
 .green {
-  background-color: #41e889;
+  /* background-color: #41e889; */
+  background: rgb(255, 85, 85);
+  background: linear-gradient(
+    90deg,
+    rgb(94, 222, 100) 0%,
+    rgb(182, 249, 140) 100%
+  );
 }
 
 .orange {
-  background-color: #fdac55;
+  /* background-color: #fdac55; */
+  background: rgb(255, 85, 85);
+  background: linear-gradient(
+    90deg,
+    rgb(247, 149, 73) 0%,
+    rgb(255, 203, 131) 100%
+  );
 }
 
 .title {
