--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body {
   min-height: 100vh;
   overflow-x: hidden;
 }
+
 header {
   display: flex;
   width: 100%;
@@ -56,6 +57,18 @@ header {
 
 header a {
   color: var(--text-color);
+}
+
+.main-header {
+  align-self: center;
+  width: 111%;
+  height: 100px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3.2em;
+  color: black;
 }
 
 main {
@@ -336,5 +349,17 @@ hr {
     flex-direction: column;
     text-align: center;
     font-size: 2vw;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .main-header {
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .main-header {
+    font-size: 1.5rem;
   }
 }
