--- a/about.css
+++ b/about.css
@@ -1,11 +1,3 @@
-.main-content {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  padding-bottom: 20px;
-  margin-top: 60px;
-}
-
 .sub-header {
   display: flex;
   flex-direction: column;
@@ -29,7 +21,7 @@
 .faq {
   display: grid;
   padding: 20px;
-  gap: 20px;
+  gap: 1.5rem;
   background-color: #353535;
   border-radius: 10px;
   color: black;
