--- a/community.css
+++ b/community.css
@@ -1,9 +1,3 @@
-main {
-  display: flex;
-  flex-direction: column;
-  margin-top: 60px;
-}
-
 .sub-header {
   font-size: 2.2rem;
   margin: 1.4rem 0;
@@ -12,12 +6,11 @@ main {
 
 .grid {
   display: grid;
-  gap: 20px;
+  gap: 1.5rem;
   background-color: #353535;
   padding: 20px;
   border-radius: 20px;
   grid-template-columns: 1fr 1fr;
-  margin-bottom: 40px;
 }
 
 .button {
