--- a/join.css
+++ b/join.css
@@ -1,11 +1,3 @@
-.main-content {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  padding-bottom: 20px;
-  margin-top: 60px;
-}
-
 .block {
   border-radius: 10px;
   font-size: 1rem;
@@ -39,8 +31,8 @@
 
 .grid {
   display: grid;
-  gap: 30px;
-  margin: 30px 0 10px 0;
+  gap: 1.5rem;
+  margin: 30px 0 0 0;
 }
 
 .grid > div {
