Made about page have <details>, and fixed the mobile expirence on the Join page

--- a/about.css
+++ b/about.css
@@ -28,8 +28,13 @@
 }
 
 .block {
-  padding: 0 20px;
+  padding: 20px 20px;
   border-radius: 10px;
+  height: min-content;
+}
+
+details[open] {
+  height: auto;
 }
 
 .block-link {
