--- a/join.css
+++ b/join.css
@@ -8,7 +8,7 @@
 .block h2 {
   display: block;
   font-weight: 800;
-  font-size: 1.7rem;
+  font-size: 1.4rem;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -19,7 +19,7 @@
   color: black;
   width: fit-content;
   padding: 0 20px;
-  min-width: 40px;
+  width: 100%;
 }
 .show-desktop {
   display: none;
