--- a/community.css
+++ b/community.css
@@ -16,7 +16,8 @@
 .button {
   display: flex;
   align-items: center;
-  background: rgb(255, 255, 255);
+  background: white;
+  color: black;
   padding: 0;
   min-height: 100px;
 }
