--- a/community.css
+++ b/community.css
@@ -13,7 +13,7 @@
   grid-template-columns: 1fr 1fr;
 }
 
-.button {
+.large-button {
   display: flex;
   align-items: center;
   background: white;
