--- a/join.css
+++ b/join.css
@@ -25,7 +25,7 @@
   display: none;
 }
 
-.button {
+.large-button {
   margin: 30px 0;
 }
 
@@ -77,7 +77,7 @@
   margin-top: auto;
 }
 
-/* START OF DISCORD SYLEING */
+/* START OF DISCORD STYLES */
 .disc-example {
   margin-top: auto;
 }
@@ -157,7 +157,7 @@
 .disc-accepted {
   background-color: #49443c;
 }
-/* END OF DISCORD SYLEING */
+/* END OF DISCORD STYLES */
 
 @media only screen and (min-width: 970px) {
   .grid {
