--- a/styles/style.scss
+++ b/styles/style.scss
@@ -26,56 +26,22 @@ body {
   min-height: 100vh;
   background: var(--bg-color);
   color: var(--text-color);
-}
-
-.page-container {
   display: flex;
   flex-direction: column;
   position: relative;
   min-height: 100vh;
   overflow-x: hidden;
-}
 
-.header {
-  display: flex;
-  width: 100%;
-  padding: 0 var(--left-right-padding);
-  box-shadow: 0px 0px 15px 0px black;
-  justify-content: space-between;
-  height: 60px;
-  background: var(--bg-color);
-}
-
-.header a {
-  color: var(--text-color);
-}
-
-.main-header {
-  align-self: center;
-  width: 112%;
-  height: 100px;
-  margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 3.2em;
-  color: black;
-  margin-top: -10px;
+  > * {
+    padding: 0 var(--left-right-padding);
+  }
 }
 
 main {
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 0 var(--left-right-padding);
   margin-bottom: auto;
-}
-
-header {
-  position: static;
-  width: 100%;
-  top: 0;
-  margin-bottom: 10px;
 }
 
 .notifications {
@@ -97,6 +63,19 @@ header {
   box-shadow: inset 0px 5px 5px -2px var(--bg-color);
 }
 
+.main-header {
+  align-self: center;
+  width: 112%;
+  height: 100px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3.2em;
+  color: black;
+  margin-top: -10px;
+}
+
 footer {
   display: flex;
   width: 100%;
@@ -106,33 +85,6 @@ footer {
   justify-content: space-between;
   font-weight: 900;
   margin-top: 50px;
-}
-
-.main-navigation li {
-  display: inline;
-  font-size: 16px;
-  margin-left: 9px;
-  font-weight: bold;
-  border-radius: 6px;
-  background-color: var(--btn-color);
-  font-weight: 600;
-  padding: 5px 10px 5px 10px;
-}
-
-ul {
-  list-style-type: none;
-  padding-top: 3px;
-}
-
-nav a {
-  color: var(--text-color);
-  padding: 4px;
-  width: 30px;
-}
-
-p {
-  font-family: 'Catamaran', sans-serif;
-  font-weight: 500;
 }
 
 summary {
@@ -201,13 +153,6 @@ summary {
   );
 }
 
-.title {
-  font-weight: 900;
-  font-size: 23px;
-  margin: 0;
-  margin-top: 13px;
-}
-
 .current-pg {
   background: var(--btn-2-color) !important;
   color: var(--bg-color) !important;
@@ -229,10 +174,6 @@ hr {
   text-align: center;
   text-decoration: underline;
   color: var(--text-color);
-}
-
-.menu-toggle {
-  display: none;
 }
 
 .button {
@@ -272,106 +213,9 @@ hr {
     color: var(--text-color);
     background: var(--bg-color);
   }
-
-  nav li:hover {
-    border-bottom: solid 4px #9adcff;
-    transition: 200ms;
-  }
 }
 
 @media only screen and (max-width: 900px) {
-  .main-navigation {
-    display: block;
-    position: relative;
-    top: 6px;
-    left: 50px;
-
-    z-index: 1;
-  }
-
-  .main-navigation a {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-
-  .main-navigation ul {
-    position: absolute;
-    width: 400px;
-    margin: -53px 0 0 -60px;
-    padding: 30px 50px 20px 50px;
-    border-radius: 0 0 0 20px;
-    box-shadow: 0 0 7px 5px rgba(0, 0, 0, 0.36);
-
-    background: var(--bg-color);
-    list-style-type: none;
-    -webkit-font-smoothing: antialiased;
-    /* to stop flickering of text in safari */
-
-    transform-origin: 0% 0%;
-    transform: translate(100%, 0);
-
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-  }
-
-  .menu-toggle:checked ~ .nav-list {
-    transform: translate(-60%, 0);
-  }
-
-  .line {
-    width: 50px;
-    height: 5px;
-    background-color: var(--btn-2-color) !important;
-    display: block;
-    margin: 8px auto;
-    transition: all 0.3s ease-in-out;
-    z-index: 5;
-    position: relative;
-    margin-right: 50px;
-  }
-
-  .menu-toggle:checked ~ .line {
-    background-color: var(--bg-color);
-  }
-
-  /*The Hamburger and it's animation*/
-
-  .menu-toggle:checked ~ .secound-line {
-    width: 0px;
-  }
-
-  .menu-toggle:checked ~ .first-line {
-    transform: translateY(13px) rotate(-45deg);
-  }
-
-  .menu-toggle:checked ~ .third-line {
-    transform: translateY(-13px) rotate(45deg);
-  }
-
-  .menu-toggle {
-    display: block;
-    width: 50px;
-    height: 35px;
-    position: absolute;
-
-    opacity: 0;
-    z-index: 10;
-    cursor: pointer;
-  }
-
-  /*Hamburger end*/
-
-  .main-navigation li {
-    display: flex;
-    height: 50px;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    font-size: 23px;
-    margin: 20px 0;
-    border-width: 5px !important;
-  }
-
   footer {
     flex-direction: column;
     text-align: center;
