--- a/styles/style.scss
+++ b/styles/style.scss
@@ -35,62 +35,50 @@ body {
   > * {
     padding: 0 var(--left-right-padding);
   }
-}
 
-main {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: auto;
-}
+  main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: auto;
 
-.notifications {
-  width: 100%;
-  font-size: 1.2em;
-  font-weight: 500;
-}
+    > .main-header {
+      align-self: center;
+      width: 112%;
+      height: 100px;
+      margin: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 3.2em;
+      color: black;
+      margin-top: -10px;
+    }
+  }
 
-.notifications > * {
-  margin: 0;
-  text-align: center;
-  width: 100%;
-  padding: 10px 30px;
-  color: var(--bg-color);
-  background-color: var(--btn-2-color);
-}
+  .button {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 1.3rem;
+    font-weight: 800;
+    color: var(--bg-color);
+    background: var(--btn-2-color);
+    transition: 200ms ease-in-out;
+    box-shadow: 0px 4px 5px 0px black;
 
-.notifications > *:first-child {
-  box-shadow: inset 0px 5px 5px -2px var(--bg-color);
-}
-
-.main-header {
-  align-self: center;
-  width: 112%;
-  height: 100px;
-  margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 3.2em;
-  color: black;
-  margin-top: -10px;
-}
-
-footer {
-  display: flex;
-  width: 100%;
-  height: fit-content;
-  padding: 0 var(--left-right-padding);
-  box-shadow: -5px 0px 15px 0px black;
-  justify-content: space-between;
-  font-weight: 900;
-  margin-top: 50px;
-}
-
-summary {
-  font-weight: 600;
-  font-size: 1.2rem;
-  cursor: pointer;
+    @media only screen and (min-width: 900px) {
+      &:hover {
+        box-shadow: 0px 0px 0px 0px black;
+        transform: translateY(3px);
+        transform: scale(0.987);
+        color: var(--text-color);
+        background: var(--bg-color);
+      }
+    }
+  }
 }
 
 .purple {
@@ -151,76 +139,6 @@ summary {
     rgb(247, 149, 73) 0%,
     rgb(255, 203, 131) 100%
   );
-}
-
-.current-pg {
-  background: var(--btn-2-color) !important;
-  color: var(--bg-color) !important;
-}
-
-.current-pg:hover {
-  border-bottom: solid 4px #ff8aae;
-}
-
-hr {
-  display: block;
-  width: 100%;
-  border-color: var(--text-color);
-}
-
-.link {
-  padding: 0;
-  margin: 0;
-  text-align: center;
-  text-decoration: underline;
-  color: var(--text-color);
-}
-
-.button {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  text-align: center;
-  border-radius: 10px;
-  font-size: 1.3rem;
-  font-weight: 800;
-  color: var(--bg-color);
-  background: var(--btn-2-color);
-  transition: 200ms ease-in-out;
-  box-shadow: 0px 4px 5px 0px black;
-}
-
-.extra-links > p > a {
-  padding-block: 0px;
-}
-
-@media only screen and (min-width: 900px) {
-  .extra-links {
-    display: grid;
-    gap: 1.5rem;
-    grid-template-columns: repeat(5, max-content);
-    font-size: large;
-  }
-
-  .line {
-    display: none;
-  }
-
-  .button:hover {
-    box-shadow: 0px 0px 0px 0px black;
-    transform: translateY(3px);
-    transform: scale(0.987);
-    color: var(--text-color);
-    background: var(--bg-color);
-  }
-}
-
-@media only screen and (max-width: 900px) {
-  footer {
-    flex-direction: column;
-    text-align: center;
-    font-size: 2vw;
-  }
 }
 
 @media only screen and (max-width: 1200px) {
