--- a/styles/about.css
+++ b/styles/about.css
@@ -38,6 +38,12 @@
   font-size: 1.2rem;
 }
 
+summary {
+  font-weight: 600;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
 details[open] {
   height: auto;
 }
