--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,163 +1,163 @@
 :root {
-  --left-right-padding: 5%;
+    --left-right-padding: 5%;
 
-  --bg-color: #202020;
-  --text-color: #fff;
-  --btn-color: #353535;
-  --btn-2-color: #eee;
-  --left-right-padding: 5%;
+    --bg-color: #202020;
+    --text-color: #fff;
+    --btn-color: #353535;
+    --btn-2-color: #eee;
+    --left-right-padding: 5%;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 body {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 
-  width: 100%;
-  min-height: 100vh;
-  background: var(--bg-color);
-  color: var(--text-color);
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  min-height: 100vh;
-  overflow-x: hidden;
-
-  > * {
-    padding: 0 var(--left-right-padding);
-  }
-
-  main {
     width: 100%;
+    min-height: 100vh;
+    background: var(--bg-color);
+    color: var(--text-color);
     display: flex;
     flex-direction: column;
-    margin-bottom: auto;
+    position: relative;
+    min-height: 100vh;
+    overflow-x: hidden;
 
-    > .main-header {
-      align-self: center;
-      width: 112%;
-      height: 100px;
-      margin: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 3.2em;
-      color: black;
-      margin-top: -10px;
+    > * {
+        padding: 0 var(--left-right-padding);
     }
-  }
 
-  .button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    text-align: center;
-    border-radius: 10px;
-    font-size: 1.3rem;
-    font-weight: 800;
-    color: var(--bg-color);
-    background: var(--btn-2-color);
-    transition: 200ms ease-in-out;
-    box-shadow: 0px 4px 5px 0px black;
+    main {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: auto;
 
-    @media only screen and (min-width: 900px) {
-      &:hover {
-        box-shadow: 0px 0px 0px 0px black;
-        transform: translateY(3px);
-        transform: scale(0.987);
-        color: var(--text-color);
-        background: var(--bg-color);
-      }
+        > .main-header {
+            align-self: center;
+            width: 112%;
+            height: 100px;
+            margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 3.2em;
+            color: black;
+            margin-top: -10px;
+        }
     }
-  }
+
+    .button {
+        display: block;
+        width: 100%;
+        padding: 10px;
+        text-align: center;
+        border-radius: 10px;
+        font-size: 1.3rem;
+        font-weight: 800;
+        color: var(--bg-color) !important;
+        background: var(--btn-2-color) !important;
+        transition: 200ms ease-in-out;
+        box-shadow: 0px 4px 5px 0px black;
+
+        @media only screen and (min-width: 900px) {
+            &:hover {
+                box-shadow: 0px 0px 0px 0px black;
+                transform: translateY(3px);
+                transform: scale(0.987);
+                color: var(--text-color) !important;
+                background: var(--bg-color) !important;
+            }
+        }
+    }
 }
 
 .purple {
-  /* background-color: #b983ff; */
-  background: rgb(125, 72, 254);
-  background: linear-gradient(
-    90deg,
-    rgb(144, 102, 251) 0%,
-    rgb(203, 164, 253) 100%
-  );
+    /* background-color: #b983ff; */
+    background: rgb(125, 72, 254);
+    background: linear-gradient(
+        90deg,
+        rgb(144, 102, 251) 0%,
+        rgb(203, 164, 253) 100%
+    );
 }
 
 .blue {
-  /* background-color: #9adcff; */
-  background: rgb(77, 127, 255);
-  background: linear-gradient(
-    90deg,
-    rgb(101, 144, 255) 0%,
-    rgb(116, 211, 255) 100%
-  );
+    /* background-color: #9adcff; */
+    background: rgb(77, 127, 255);
+    background: linear-gradient(
+        90deg,
+        rgb(101, 144, 255) 0%,
+        rgb(116, 211, 255) 100%
+    );
 }
 
 .red {
-  /* background-color: #ff8aae; */
-  background: rgb(255, 85, 85);
-  background: linear-gradient(
-    90deg,
-    rgb(255, 103, 103) 0%,
-    rgb(255, 162, 131) 100%
-  );
+    /* background-color: #ff8aae; */
+    background: rgb(255, 85, 85);
+    background: linear-gradient(
+        90deg,
+        rgb(255, 103, 103) 0%,
+        rgb(255, 162, 131) 100%
+    );
 }
 
 .yellow {
-  /* background-color: #fff89a; */
-  background: rgb(255, 85, 85);
-  background: linear-gradient(
-    90deg,
-    rgb(252, 221, 81) 0%,
-    rgb(255, 248, 143) 100%
-  );
+    /* background-color: #fff89a; */
+    background: rgb(255, 85, 85);
+    background: linear-gradient(
+        90deg,
+        rgb(252, 221, 81) 0%,
+        rgb(255, 248, 143) 100%
+    );
 }
 
 .green {
-  /* background-color: #41e889; */
-  background: rgb(255, 85, 85);
-  background: linear-gradient(
-    90deg,
-    rgb(94, 222, 100) 0%,
-    rgb(182, 249, 140) 100%
-  );
+    /* background-color: #41e889; */
+    background: rgb(255, 85, 85);
+    background: linear-gradient(
+        90deg,
+        rgb(94, 222, 100) 0%,
+        rgb(182, 249, 140) 100%
+    );
 }
 
 .orange {
-  /* background-color: #fdac55; */
-  background: rgb(255, 85, 85);
-  background: linear-gradient(
-    90deg,
-    rgb(247, 149, 73) 0%,
-    rgb(255, 203, 131) 100%
-  );
+    /* background-color: #fdac55; */
+    background: rgb(255, 85, 85);
+    background: linear-gradient(
+        90deg,
+        rgb(247, 149, 73) 0%,
+        rgb(255, 203, 131) 100%
+    );
 }
 
 @media only screen and (max-width: 1200px) {
-  .main-header {
-    font-size: 2rem;
-  }
+    .main-header {
+        font-size: 2rem;
+    }
 }
 
 @media only screen and (max-width: 500px) {
-  .main-header {
-    font-size: 1.5rem;
-  }
+    .main-header {
+        font-size: 1.5rem;
+    }
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    --bg-color: #ffffff;
-    --text-color: #000;
-    --btn-color: #e3e3e3;
-    --btn-2-color: #222;
-  }
+    :root {
+        --bg-color: #ffffff;
+        --text-color: #000;
+        --btn-color: #e3e3e3;
+        --btn-2-color: #222;
+    }
 }
