--- a/app/components/header/header.module.scss
+++ b/app/components/header/header.module.scss
@@ -2,27 +2,26 @@ header.header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-
-	top: 0;
-	width: 100%;
 	height: 60px;
-	margin-bottom: 10px;
 
 	box-shadow: 0 0 15px 0 black;
+	z-index: 1;
 	background: var(--bg-color);
 
 	> a {
 		color: var(--text-color);
 		font-weight: 800;
 		font-size: 23px;
-		margin: 0;
 		text-transform: uppercase;
 	}
 
 	> nav {
 		> ul {
 			list-style-type: none;
-			padding-top: 3px;
+			padding-inline-start: 0;
+			display: flex;
+			flex-direction: row;
+			gap: 10px;
 
 			> li {
 				display: inline;
@@ -31,7 +30,6 @@ header.header {
 					width: 30px;
 					color: var(--text-color);
 					font-size: 16px;
-					margin-left: 9px;
 					border-radius: 6px;
 					background-color: var(--btn-color);
 					font-weight: 600;
@@ -100,8 +98,6 @@ header.header {
 				margin: 8px auto;
 				transition: all 0.3s ease-in-out;
 				z-index: 5;
-				position: relative;
-				margin-right: 50px;
 			}
 			> .finished {
 				&:nth-child(1) {
@@ -120,7 +116,7 @@ header.header {
 	}
 }
 
-.current-pg {
+.currentPg {
 	background: var(--btn-2-color) !important;
 	color: var(--bg-color) !important;
 
