--- a/app/contact/contact.module.scss
+++ b/app/contact/contact.module.scss
@@ -4,7 +4,7 @@
 	color: white;
 }
 
-.sub-header {
+.subHeader {
 	background-color: #353535;
 	padding: 20px;
 	text-align: center;
@@ -12,7 +12,7 @@
 	margin-top: 20px;
 }
 
-.sub-header > * {
+.subHeader > * {
 	margin: 0;
 }
 
@@ -26,7 +26,7 @@
 	justify-content: space-between;
 }
 
-.wrapper-icon-txt {
+.wrapperIconTxt {
 	display: flex;
 	text-align: center;
 	align-items: center;
@@ -39,16 +39,16 @@
 	height: 200px;
 }
 
-.disc-svg {
+.discSvg {
 	max-height: 7rem;
 }
 
-.email-svg {
+.emailSvg {
 	max-height: 10rem;
 	fill: #353535;
 }
 
-.sub-text {
+.subText {
 	display: inline;
 	text-align: center;
 	font-size: 1.3rem;
@@ -56,20 +56,20 @@
 	font-weight: 800;
 }
 
-.response-time {
+.responseTime {
 	text-align: center;
 	font-weight: lighter;
 	font-style: italic;
 	color: #c2c2c2;
 }
 
-.content-grid {
+.contentGrid {
 	display: grid;
 	gap: 20px;
 }
 
 @media only screen and (min-width: 1100px) {
-	.content-grid {
+	.contentGrid {
 		grid-template-columns: 1fr 1fr;
 	}
 }
