--- a/styles/index.css
+++ b/styles/index.css
@@ -28,7 +28,7 @@ main h1 {
 }
 
 @media only screen and (min-width: 1300px) {
-	.hide-desktop {
+	.hideDesktop {
 		display: none;
 	}
 
@@ -39,11 +39,11 @@ main h1 {
 		flex-direction: column;
 	}
 
-	.grid-col-span-2 {
+	.gridColSpan2 {
 		grid-column: span 2;
 	}
 
-	.grid-row-span-2 {
+	.gridRowSpan2 {
 		grid-row: span 2;
 	}
 
@@ -51,7 +51,7 @@ main h1 {
 		grid-template-columns: repeat(4, 1fr);
 	}
 
-	.join-btn {
+	.joinBtn {
 		display: none;
 	}
 }
