Removed unused stylesheets

--- a/app/components/footer/footer.module.scss
+++ b/app/components/footer/footer.module.scss
@@ -23,6 +23,7 @@ footer.footer {
 			text-decoration: underline;
 			color: var(--text-color);
 			width: 100%;
+			text-transform: uppercase;
 		}
 
 		@media only screen and (min-width: 900px) {
