--- a/app/community/community.module.scss
+++ b/app/community/community.module.scss
@@ -2,6 +2,7 @@
 	font-size: 2.2rem;
 	margin: 1.4rem 0;
 	text-align: center;
+	text-transform: uppercase;
 	@media only screen and (max-width: 500px) {
 		font-size: 1.3rem;
 	}
