--- a/app/about/about.module.scss
+++ b/app/about/about.module.scss
@@ -1,3 +1,9 @@
+@use "../../styles/mixins.scss" as mixins;
+
+.title {
+	@include mixins.title;
+}
+
 .subHeader {
 	display: flex;
 	flex-direction: column;
@@ -8,10 +14,12 @@
 	align-items: center;
 	text-align: center;
 	color: white;
-}
-
-.subHeader > * {
-	margin: 0;
+	> h2 {
+		text-transform: uppercase;
+	}
+	> * {
+		margin: 0;
+	}
 }
 
 .subHeaderLink {
@@ -26,7 +34,7 @@
 	background-color: #353535;
 	border-radius: 10px;
 	color: black;
-	@media only screen and (min-width: 780px) {
+	@include mixins.desktop {
 		grid-template-columns: 1fr 1fr;
 	}
 }
