--- a/app/community/community.module.scss
+++ b/app/community/community.module.scss
@@ -1,11 +1,15 @@
+@use "../../styles/mixins.scss" as mixins;
+
+.title {
+	@include mixins.title;
+}
+
 .subHeader {
-	font-size: 2.2rem;
-	margin: 1.4rem 0;
+	color: white;
+	font-size: 35.2px;
+	font-weight: 700;
 	text-align: center;
 	text-transform: uppercase;
-	@media only screen and (max-width: 500px) {
-		font-size: 1.3rem;
-	}
 }
 
 .grid {
@@ -15,34 +19,36 @@
 	padding: 20px;
 	border-radius: 20px;
 	grid-template-columns: 1fr 1fr;
-	@media only screen and (max-width: 1200px) {
+	@include mixins.mobile {
 		grid-template-columns: 1fr;
 	}
 }
 
-.largeButton {
+@mixin largeButton {
+	@include mixins.button;
+	padding: 0;
 	display: flex;
 	align-items: center;
 	background: white;
 	color: black;
-	padding: 0;
 	min-height: 100px;
 }
 
 .button {
+	@include largeButton;
+	border-radius: 10px;
 	h3 {
 		display: inline-block;
 		font-size: 1.5rem;
-		font-weight: 900;
+		font-weight: 600;
 		margin: auto;
-		padding: 10px;
 		white-space: nowrap;
 	}
 	img {
 		display: inline-block;
 	}
 	&:hover > .icon {
-		@media only screen and (min-width: 800px) {
+		@include mixins.desktop {
 			background-color: #333;
 			width: 60%;
 			box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.616);
@@ -50,11 +56,15 @@
 	}
 }
 
+.wikiButton {
+	@include largeButton;
+	text-transform: uppercase;
+}
+
 .icon {
 	background-color: rgb(224, 224, 224);
 	height: 100%;
 	width: 100px;
-	padding: 0 20px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
