--- a/app/components/footer/footer.module.scss
+++ b/app/components/footer/footer.module.scss
@@ -1,53 +1,59 @@
+@use "../../../styles/mixins.scss" as mixins;
+
 footer.footer {
-	display: flex;
-	width: 100%;
-	padding: 0 var(--left-right-padding);
+	align-items: center;
+	background: var(--bg-color);
 	box-shadow: -5px 0 15px 0 black;
-	justify-content: space-between;
-	margin-top: 50px;
+	display: flex;
 	height: 60px;
+	justify-content: space-between;
 	text-align: center;
-	font-weight: 500;
+	z-index: 1;
 
 	> nav {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		flex-direction: column;
-
-		gap: 1.3rem;
-		font-size: large;
-
-		> a {
-			text-align: center;
-			text-decoration: underline;
-			color: var(--text-color);
-			width: 100%;
-			text-transform: uppercase;
+		> ul {
+			align-items: center;
+			justify-content: center;
+			display: flex;
+			flex-direction: row;
+			gap: 1.3rem;
+			list-style-type: none;
+			margin: 0;
+			padding-inline-start: 0;
+			> li {
+				display: inline;
+				> a {
+					color: var(--text-color);
+					text-align: center;
+					text-decoration: underline;
+					text-transform: uppercase;
+					width: 100%;
+				}
+			}
 		}
 
-		@media only screen and (min-width: 900px) {
-			& {
-				flex-direction: row;
-
-				> a {
-					width: max-content;
+		@include mixins.desktop {
+			flex-direction: row;
+			> ul {
+				> li {
+					> a {
+						width: max-content;
+					}
 				}
 			}
 		}
 	}
 
-	@media only screen and (max-width: 900px) {
-		& {
-			flex-direction: column;
-			text-align: center;
-			font-size: 2vw;
-			height: min-content;
-			padding-bottom: 20px;
-		}
+	@include mixins.mobile {
+		flex-direction: column;
+		text-align: center;
+		font-size: 2vw;
+		height: min-content;
+		padding-bottom: 20px;
 	}
 }
 
 .button {
+	@include mixins.button;
 	padding: 7px 15px !important;
 }
