--- a/app/contact/contact.module.scss
+++ b/app/contact/contact.module.scss
@@ -1,3 +1,9 @@
+@use "../../styles/mixins.scss" as mixins;
+
+.title {
+	@include mixins.title;
+}
+
 .grid {
 	display: grid;
 	gap: 20px;
@@ -10,7 +16,9 @@
 	text-align: center;
 	border-radius: 10px;
 	margin-top: 20px;
-	text-transform: uppercase;
+	> h2 {
+		text-transform: uppercase;
+	}
 }
 
 .subHeader > * {
@@ -34,7 +42,6 @@
 	justify-content: space-around;
 	margin-top: auto;
 
-	padding: 50px;
 	border-radius: 10px;
 	margin-bottom: 30px;
 	height: 200px;
@@ -67,10 +74,11 @@
 .contentGrid {
 	display: grid;
 	gap: 20px;
-}
-
-@media only screen and (min-width: 1100px) {
-	.contentGrid {
+	@include mixins.desktop {
 		grid-template-columns: 1fr 1fr;
 	}
+}
+
+.button {
+	@include mixins.button;
 }
