--- a/app/index/block/block.module.scss
+++ b/app/index/block/block.module.scss
@@ -1,11 +1,14 @@
 .block {
-	padding: 10px 30px;
 	border-radius: 10px;
 	color: black;
 	font-size: 1rem;
+	padding: 10px 30px;
 	> h2 {
-		font-weight: 900;
 		font-size: 23px;
+		font-weight: 700;
 		margin-bottom: 0;
+		text-transform: uppercase;
+	}
+	> p {
 	}
 }
