--- a/app/index/index.module.scss
+++ b/app/index/index.module.scss
@@ -1,41 +1,49 @@
-h1.title {
+@use "../../styles/mixins.scss" as mixins;
+
+.title {
 	font-size: 4vw;
 	margin: 1.4rem 0;
 	text-align: center;
+	text-transform: uppercase;
 }
 
-article.grid {
+.grid {
 	background-color: #353535;
-	padding: 20px;
 	border-radius: 20px;
-
 	display: grid;
 	gap: 1.5rem;
+	padding: 20px;
 
-	@media only screen and (min-width: 1300px) {
-		& {
-			grid-template-columns: repeat(4, 1fr);
+	@include mixins.desktop {
+		grid-template-columns: repeat(4, 1fr);
+	}
+
+	> a {
+		@include mixins.button;
+
+		display: none;
+
+		@include mixins.mobile {
+			display: block;
 		}
+	}
+}
 
-		> a {
-			display: none;
-		}
+.column {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+}
 
-		> section {
-			&.column {
-				display: flex;
-				align-items: center;
-				text-align: center;
-				flex-direction: column;
-			}
+.gridRowSpan2 {
+	@include mixins.desktop {
+		grid-row: span 2;
+	}
+}
 
-			&.column.spanTwo {
-				grid-row: span 2;
-			}
-
-			&:not(.column) {
-				grid-column: span 2;
-			}
-		}
+.gridColSpan2 {
+	@include mixins.desktop {
+		grid-column: span 2;
 	}
 }
