--- a/app/join/discord/discord.module.scss
+++ b/app/join/discord/discord.module.scss
@@ -1,29 +1,32 @@
 .disc {
 	background-color: #36393f;
 	border-radius: 0 0 10px 10px;
-	padding: 7px 5px 7px 0;
+	box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.5);
 	display: flex;
 	flex-direction: column;
-	margin-bottom: 20px;
-	box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.5);
+	gap: 20px;
+	padding: 7px;
 }
 
 .discMessageContainer {
-	background-color: #40444b;
-	margin: 20px 0 0 5px;
-	border-radius: 7px;
-	display: flex;
 	align-items: center;
-	height: 50px;
+	background-color: #40444b;
+	border-radius: 7px;
 	cursor: not-allowed;
+	display: flex;
+	height: 50px;
 	user-select: none;
-	& > p {
-		margin-left: 20px;
-		font-weight: 400;
-		color: #72767d;
+	> div {
+		&:first-of-type {
+			width: 50px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+		&:last-of-type {
+			flex-grow: 1;
+			font-weight: 400;
+			color: #72767d;
+		}
 	}
-}
-
-.discAddBtn {
-	margin-left: 20px;
 }
