--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,9 +1,13 @@
+@use "./mixins.scss" as mixins;
+
 :root {
-	--bg-color: #202020;
-	--text-color: #fff;
-	--btn-color: #353535;
-	--btn-2-color: #eee;
-	@media (prefers-color-scheme: light) {
+	@include mixins.dark-theme {
+		--bg-color: #202020;
+		--text-color: #fff;
+		--btn-color: #353535;
+		--btn-2-color: #eee;
+	}
+	@include mixins.light-theme {
 		--bg-color: #ffffff;
 		--text-color: #000;
 		--btn-color: #e3e3e3;
@@ -13,77 +17,25 @@
 	--left-right-padding: 5%;
 }
 
-*,
-*::before,
-*::after {
-	box-sizing: border-box;
-}
-
 a {
 	text-decoration: none;
 }
 
 body {
 	margin: 0;
-	padding: 0;
-
-	width: 100%;
 	background: var(--bg-color);
 	color: var(--text-color);
 	display: flex;
 	flex-direction: column;
-	position: relative;
 	min-height: 100vh;
-	overflow-x: hidden;
 
 	> * {
 		padding: 0 var(--left-right-padding);
 	}
 
 	main {
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-		margin-bottom: auto;
-		.mainHeader {
-			align-self: center;
-			height: 100px;
-			margin: 0;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			font-size: 3.2em;
-			color: black;
-			text-transform: uppercase;
-			@media only screen and (max-width: 1200px) {
-				font-size: 2rem;
-			}
-			@media only screen and (max-width: 500px) {
-				font-size: 1.5rem;
-			}
-		}
-	}
-
-	.button {
-		display: block;
-		width: 100%;
-		padding: 10px;
-		text-align: center;
-		border-radius: 10px;
-		font-size: 1.3rem;
-		color: var(--bg-color) !important;
-		background: var(--btn-2-color) !important;
-		transition: 200ms ease-in-out;
-		box-shadow: 0 4px 5px 0 black;
-
-		&:hover {
-			@media only screen and (min-width: 900px) {
-				box-shadow: 0 0 0 0 black;
-				transform: translateY(3px) scale(0.987);
-				color: var(--text-color) !important;
-				background: var(--bg-color) !important;
-			}
-		}
+		flex-grow: 1;
+		margin-bottom: 50px;
 	}
 }
 
@@ -121,4 +73,8 @@ body {
 	/* background-color: #fdac55; */
 	background: #ff5555;
 	background: linear-gradient(90deg, #f79549 0%, #ffcb83 100%);
+}
+
+.data-nextjs-scroll-focus-boundary {
+	display: contents;
 }
