--- a/app/components/banner/banner.module.scss
+++ b/app/components/banner/banner.module.scss
@@ -5,3 +5,9 @@
 	color: var(--bg-color);
 	background-color: var(--btn-2-color);
 }
+
+.title {
+	font-size: 1.5rem;
+	font-weight: bold;
+	text-decoration: underline;
+}
